--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "Val Saven <val.saven@gmail.com>",
     "Jil Saven <jil.saven@gmail.com>"
   ],
+  "scripts": {
+    "start": "node server"
+  },
   "engines": {
     "node": "^6.5.0",
     "npm": "^3.10.7"
@@ -16,7 +19,20 @@
     "angular": "^1.5.8",
     "bootstrap": "^3.3.7",
     "express": "^4.14.0",
+    "lodash": "^4.16.1",
     "mysql": "^2.11.1",
     "sequelize": "^3.24.3"
+  },
+  "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-register": "^6.14.0",
+    "gulp": "^3.9.1",
+    "gulp-load-plugins": "^1.3.0",
+    "nodemon": "^1.10.2",
+    "run-sequence": "^1.2.2",
+    "webpack": "^1.13.2"
   }
 }
