--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "babel-register": "^6.14.0",
     "gulp": "^3.9.1",
     "gulp-load-plugins": "^1.3.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-watch": "^4.3.9",
     "nodemon": "^1.10.2",
     "run-sequence": "^1.2.2",
     "webpack": "^1.13.2"
