--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-register": "^6.14.0",
     "gulp": "^3.9.1",
+    "gulp-inject": "^4.1.0",
     "gulp-load-plugins": "^1.3.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-sort": "^2.0.0",
     "gulp-watch": "^4.3.9",
     "nodemon": "^1.10.2",
     "run-sequence": "^1.2.2",
