--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-register": "^6.14.0",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "gulp-env": "^0.4.0",
     "gulp-inject": "^4.1.0",
     "gulp-load-plugins": "^1.3.0",
     "gulp-plumber": "^1.1.0",
