--- a/package.json
+++ b/package.json
@@ -17,19 +17,27 @@
   "license": "GPL-3.0",
   "dependencies": {
     "angular": "^1.5.8",
+    "angular-ui-router": "^0.3.1",
     "bootstrap": "^3.3.7",
+    "ejs": "^2.5.2",
     "express": "^4.14.0",
     "lodash": "^4.16.1",
     "mysql": "^2.11.1",
     "sequelize": "^3.24.3"
   },
   "devDependencies": {
+    "autoprefixer": "^6.4.1",
     "babel": "^6.5.2",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-register": "^6.14.0",
+    "browser-sync": "^2.16.0",
+    "bs-fullscreen-message": "^1.1.0",
+    "css-loader": "^0.25.0",
     "del": "^2.2.2",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
     "gulp-env": "^0.4.0",
     "gulp-inject": "^4.1.0",
@@ -37,8 +45,16 @@
     "gulp-plumber": "^1.1.0",
     "gulp-sort": "^2.0.0",
     "gulp-watch": "^4.3.9",
+    "html-webpack-harddisk-plugin": "0.0.2",
+    "html-webpack-plugin": "^2.22.0",
+    "ng-annotate-loader": "^0.1.1",
     "nodemon": "^1.10.2",
+    "postcss-loader": "^0.13.0",
+    "raw-loader": "^0.5.1",
     "run-sequence": "^1.2.2",
-    "webpack": "^1.13.2"
+    "strip-ansi": "^3.0.1",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.2",
+    "webpack-dev-middleware": "^1.8.2"
   }
 }
