--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "angular-ui-router": "^0.3.1",
     "bootstrap": "^3.3.7",
     "ejs": "^2.5.2",
+    "errorhandler": "^1.4.3",
     "express": "^4.14.0",
     "lodash": "^4.16.1",
     "mysql": "^2.11.1",
@@ -44,11 +45,13 @@
     "gulp-load-plugins": "^1.3.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sort": "^2.0.0",
+    "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.9",
     "html-webpack-harddisk-plugin": "0.0.2",
     "html-webpack-plugin": "^2.22.0",
     "ng-annotate-loader": "^0.1.1",
     "nodemon": "^1.10.2",
+    "open": "0.0.5",
     "postcss-loader": "^0.13.0",
     "raw-loader": "^0.5.1",
     "run-sequence": "^1.2.2",
