--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "express": "^4.14.0",
     "lodash": "^4.16.1",
     "mysql": "^2.11.1",
-    "sequelize": "^3.24.3",
-    "shrink-ray": "^0.1.3"
+    "sequelize": "^3.24.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.1",
