--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "^2.5.2",
     "errorhandler": "^1.4.3",
     "express": "^4.14.0",
+    "fast-json-patch": "^1.1.1",
     "lodash": "^4.16.1",
     "mysql": "^2.11.1",
     "sequelize": "^3.24.3"
