--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "errorhandler": "^1.4.3",
     "express": "^4.14.0",
     "fast-json-patch": "^1.1.1",
+    "hover.css": "^2.0.2",
     "lodash": "^4.16.1",
+    "moment": "^2.15.1",
     "mysql": "^2.11.1",
     "sequelize": "^3.24.3"
   },
