--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mybooklist",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "server/index.js",
   "authors": [
     "Val Saven <val.saven@gmail.com>",
@@ -19,15 +19,14 @@
     "angular": "^1.5.8",
     "angular-resource": "^1.5.8",
     "angular-ui-router": "^0.3.1",
-    "bootstrap": "^3.3.7",
     "ejs": "^2.5.2",
     "errorhandler": "^1.4.3",
     "express": "^4.14.0",
     "fast-json-patch": "^1.1.1",
     "lodash": "^4.16.1",
     "moment": "^2.15.1",
-    "mysql": "^2.11.1",
-    "sequelize": "^3.24.3"
+    "sequelize": "^3.24.3",
+    "sqlite3": "^3.1.6"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.1",
