--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "gulp-load-plugins": "^1.3.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sort": "^2.0.0",
+    "gulp-tslint": "^6.1.2",
+    "gulp-typescript": "^3.0.2",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.9",
     "html-webpack-harddisk-plugin": "0.0.2",
@@ -59,6 +61,7 @@
     "run-sequence": "^1.2.2",
     "strip-ansi": "^3.0.1",
     "style-loader": "^0.13.1",
+    "typescript": "^2.0.3",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.2"
   }
