--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
     "errorhandler": "^1.4.3",
     "express": "^4.14.0",
     "fast-json-patch": "^1.1.1",
-    "lodash": "^4.16.1",
-    "moment": "^2.15.1",
-    "sequelize": "^3.24.5",
-    "sqlite3": "^3.1.6"
+    "lodash": "^4.16.5",
+    "moment": "^2.15.2",
+    "sequelize": "^3.24.6",
+    "sqlite3": "^3.1.8"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.1",
     "babel": "^6.5.2",
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-register": "^6.14.0",
+    "babel-core": "^6.18.0",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-register": "^6.18.0",
     "browser-sync": "^2.17.5",
     "bs-fullscreen-message": "^1.1.0",
     "css-loader": "^0.25.0",
@@ -44,25 +44,26 @@
     "gulp": "^3.9.1",
     "gulp-env": "^0.4.0",
     "gulp-inject": "^4.1.0",
-    "gulp-load-plugins": "^1.3.0",
+    "gulp-load-plugins": "^1.4.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sort": "^2.0.0",
     "gulp-tslint": "^6.1.2",
-    "gulp-typescript": "^3.0.2",
+    "gulp-typescript": "^3.1.2",
     "gulp-util": "^3.0.7",
-    "gulp-watch": "^4.3.9",
+    "gulp-watch": "^4.3.10",
     "html-webpack-harddisk-plugin": "0.0.2",
-    "html-webpack-plugin": "^2.24.0",
+    "html-webpack-plugin": "^2.24.1",
     "ng-annotate-loader": "^0.2.0",
-    "nodemon": "^1.10.2",
+    "nodemon": "^1.11.0",
     "open": "0.0.5",
-    "postcss-loader": "^1.0.0",
+    "postcss-loader": "^1.1.0",
     "raw-loader": "^0.5.1",
     "run-sequence": "^1.2.2",
     "strip-ansi": "^3.0.1",
     "style-loader": "^0.13.1",
-    "typescript": "^2.0.3",
-    "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.8.2"
+    "typescript": "^2.0.6",
+    "webpack": "^1.13.3",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-stream": "^3.2.0"
   }
 }
