--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "mybooklist",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "main": "server/index.js",
   "authors": [
     "Val Saven <val.saven@gmail.com>",
     "Jil Saven <jil.saven@gmail.com>"
   ],
   "scripts": {
-    "start": "node server"
+    "start": "node server",
+    "test": "mocha test/**/* --timeout 10000"
   },
   "engines": {
     "node": "^7.0.0",
@@ -37,6 +38,8 @@
     "babel-register": "^6.18.0",
     "browser-sync": "^2.17.5",
     "bs-fullscreen-message": "^1.1.0",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "css-loader": "^0.25.0",
     "del": "^2.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -53,12 +56,14 @@
     "gulp-watch": "^4.3.10",
     "html-webpack-harddisk-plugin": "0.0.2",
     "html-webpack-plugin": "^2.24.1",
+    "mocha": "^3.1.2",
     "ng-annotate-loader": "^0.2.0",
     "nodemon": "^1.11.0",
     "open": "0.0.5",
     "postcss-loader": "^1.1.0",
     "raw-loader": "^0.5.1",
     "run-sequence": "^1.2.2",
+    "sinon": "^1.17.6",
     "strip-ansi": "^3.0.1",
     "style-loader": "^0.13.1",
     "typescript": "^2.0.6",
