--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mybooklist",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "main": "server/index.js",
   "authors": [
     "Val Saven <val.saven@gmail.com>",
@@ -11,8 +11,8 @@
     "test": "mocha test/**/* --timeout 10000"
   },
   "engines": {
-    "node": "^7.0.0",
-    "npm": "^3.10.9"
+    "node": "^8.1.3",
+    "npm": "^5.0.4"
   },
   "private": true,
   "license": "GPL-3.0",
@@ -34,6 +34,7 @@
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-latest": "^6.24.1",
     "babel-register": "^6.18.0",
     "browser-sync": "^2.17.5",
     "bs-fullscreen-message": "^1.1.0",
