--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
   "name": "mybooklist",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "main": "server/index.js",
-  "authors": [
-    "Val Saven <val.saven@gmail.com>",
-    "Jil Saven <jil.saven@gmail.com>"
-  ],
+  "author": "Val Saven <val.saven@gmail.com>",
   "scripts": {
     "start": "node server",
     "test": "mocha test/**/* --timeout 10000"
   },
   "engines": {
-    "node": "^8.1.3",
-    "npm": "^5.0.4"
+    "node": "^9.2.0",
+    "npm": "^5.5.1"
   },
   "private": true,
   "license": "GPL-3.0",
